force-app/main/default/objects/OpportunityLineItem__c/OpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>Products</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Opportunity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>