force-app/main/default/objects/OpportunityLineItem__c/fields/Commissioning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Charges__c</fullName>
    <label>Commissioning Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>