force-app/main/default/objects/OpportunityLineItem__c/fields/Forwarding_Charges__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Charges__c</fullName>
    <label>Forwarding Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>