force-app/main/default/objects/OpportunityLineItem__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>