force-app/main/default/objects/OpportunityLineItem__c/fields/Operation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Operation_Mode__c</fullName>
    <label>Operation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Semi-Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>