force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <referenceTo>Opportunities__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Product_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>