force-app/main/default/objects/OpportunityLineItem__c/fields/Packing_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges_Amount__c</fullName>
    <formula>Sub_Total__c  *  Packing_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>