force-app/main/default/objects/OpportunityLineItem__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Shelling</fullName>
            </value>
            <value>
                <fullName>Polishing</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Elevators</fullName>
            </value>
            <value>
                <fullName>Motors</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>TonRiceMill</fullName>
                <label>1 Ton Rice Mill</label>
            </value>
            <value>
                <fullName>FRK Blenders</fullName>
                <label>FRK Blenders( NABL and BIS)</label>
            </value>
            <value>
                <fullName>Color sorters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>