force-app/main/default/objects/OpportunityLineItem__c/fields/Product_Item_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_Image__c</fullName>
    <label>Product Item Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>