force-app/main/default/objects/OpportunityLineItem__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product / Machine Code</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipName>Product_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>