force-app/main/default/objects/OpportunityLineItem__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>