force-app/main/default/objects/OpportunityLineItem__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <formula>Products__r.Quoted_Price__c</formula>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>