force-app/main/default/objects/OpportunityLineItem__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Sub_Total__c  +  Packing_Charges_Amount__c  +  Forwarding_Charges_Amount__c  +  Commissioning_Charges__c  +  Transit_Insurance_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>