force-app/main/default/objects/OpportunityLineItem__c/fields/Transit_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance__c</fullName>
    <label>Transit Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>