force-app/main/default/objects/OpportunityLineItem__c/fields/Transit_Insurance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance_Charges__c</fullName>
    <formula>Sub_Total__c   *  Transit_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Insurance Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>