force-app/main/default/objects/OpportunityLineItem__c/fields/Usage_Application__c.field-meta.xml
<CustomField>
    <fullName>Usage_Application__c</fullName>
    <label>Usage/Application</label>
    <type>TextArea</type>
</CustomField>