force-app/main/default/objects/OpportunityLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Products__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunities__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>